--- a/LibraryConverter/LibraryConverter.csproj
+++ b/LibraryConverter/LibraryConverter.csproj
@@ -1,113 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8CA0C8C2-F7EC-4ED7-9DB6-D3FA208EBF93}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LibraryConverter</RootNamespace>
-    <AssemblyName>LibraryConverter</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <UseWPF>true</UseWPF>
+    <Authors>Boredbone</Authors>
+    <Version>2.0.0</Version>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>none</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Interactive, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Interactive.3.1.1\lib\net45\System.Interactive.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\CsCommon\CsCommon.csproj" />
+    <ProjectReference Include="..\Database\Database.csproj" />
+    <ProjectReference Include="..\ImageLibrary\ImageLibrary.csproj" />
+    <ProjectReference Include="..\ShibugakiViewer.Settings\ShibugakiViewer.Settings.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Converter.cs" />
-    <Compile Include="SparkImageViewer\FilePropertyConverter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SparkImageViewer\ApplicationData.cs" />
-    <Compile Include="SparkImageViewer\ApplicationSettings.cs" />
-    <Compile Include="SparkImageViewer\ComplexSearchMethod.cs" />
-    <Compile Include="SparkImageViewer\FileInformation.cs" />
-    <Compile Include="SparkImageViewer\FileProperty.cs" />
-    <Compile Include="SparkImageViewer\GroupLeaderFile.cs" />
-    <Compile Include="SparkImageViewer\IFileInformationcs.cs" />
-    <Compile Include="SparkImageViewer\ImageLibrary.cs" />
-    <Compile Include="SparkImageViewer\ISearchSetting.cs" />
-    <Compile Include="SparkImageViewer\KnownFolder.cs" />
-    <Compile Include="SparkImageViewer\PropertyData.cs" />
-    <Compile Include="SparkImageViewer\SavedLibraryList.cs" />
-    <Compile Include="SparkImageViewer\SeachInformation.cs" />
-    <Compile Include="SparkImageViewer\SearchMethod.cs" />
-    <Compile Include="SparkImageViewer\SearchSetting.cs" />
-    <Compile Include="SparkImageViewer\SearchSortManager.cs" />
-    <Compile Include="SparkImageViewer\SortMethod.cs" />
-    <Compile Include="SparkImageViewer\SortSetting.cs" />
-    <Compile Include="SparkImageViewer\TagDictionary.cs" />
-    <Compile Include="SparkImageViewer\TagInformation.cs" />
-    <Compile Include="SparkImageViewer\TagManagercs.cs" />
-    <Compile Include="SparkImageViewer\UnitSearchMethod.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CsCommon\CsCommon.csproj">
-      <Project>{84dad39a-811d-4c38-9a03-99daaf96f191}</Project>
-      <Name>CsCommon</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Database\Database.csproj">
-      <Project>{a3c50f5f-b23c-4298-a14b-eec5913418f8}</Project>
-      <Name>Database</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ImageLibrary\ImageLibrary.csproj">
-      <Project>{930b09f8-a4e1-44c7-b78f-09b185a754a7}</Project>
-      <Name>ImageLibrary</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ShibugakiViewer.Settings\ShibugakiViewer.Settings.csproj">
-      <Project>{e6dcfbec-0739-4214-9067-f29708eb528b}</Project>
-      <Name>ShibugakiViewer.Settings</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>xcopy /y "$(TargetPath)" "..\..\..\ShibugakiViewer\bin\Debug\"
-xcopy /y "$(TargetPath)" "..\..\..\ShibugakiViewer\bin\Release\"</PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
