--- a/ShibugakiViewer/ShibugakiViewer.csproj
+++ b/ShibugakiViewer/ShibugakiViewer.csproj
@@ -30,12 +30,10 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.30" />
     <PackageReference Include="ExifLib.Standard" Version="1.7.0" />
-    <PackageReference Include="Imazen.WebP" Version="10.0.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.0.1" />
     <PackageReference Include="ReactiveProperty" Version="6.1.3" />
     <PackageReference Include="RestoreWindowPlace" Version="2.0.0" />
-    <PackageReference Include="sqlite" Version="3.13.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.111" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
     <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
@@ -51,6 +49,7 @@
     <ProjectReference Include="..\Database\Database.csproj" />
     <ProjectReference Include="..\ImageLibrary\ImageLibrary.csproj" />
     <ProjectReference Include="..\ShibugakiViewer.Settings\ShibugakiViewer.Settings.csproj" />
+    <ProjectReference Include="..\WebpWrapperNetCore\WebpWrapperNetCore.csproj" />
     <ProjectReference Include="..\WpfTools\WpfTools.csproj" />
   </ItemGroup>
 
