--- a/WebpWrapperNetCore/WebpWrapperNetCore.csproj
+++ b/WebpWrapperNetCore/WebpWrapperNetCore.csproj
@@ -15,21 +15,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\libwebp_x64.dll" />
-    <None Remove="Resources\libwebp_x86.dll" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\libwebp_x64.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Resources\libwebp_x86.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Resource>
+    <None Update="Resources\libwebp_x64.dll">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\libwebp_x86.dll">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
