--- a/ShibugakiViewer/ShibugakiViewer.csproj
+++ b/ShibugakiViewer/ShibugakiViewer.csproj
@@ -75,7 +75,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="powershell -ExecutionPolicy RemoteSigned -File &quot;$(ProjectDir)resolve_version.ps1&quot;&#xD;&#xA;" />
+    <Exec Command="if &quot;$(ConfigurationName)&quot; == &quot;Release&quot; (&#xD;&#xA;powershell -ExecutionPolicy RemoteSigned -File &quot;$(ProjectDir)resolve_version.ps1&quot;&#xD;&#xA;)" />
   </Target>
 
 </Project>
