--- a/WebpWrapperNetCore/WebpWrapperNetCore.csproj
+++ b/WebpWrapperNetCore/WebpWrapperNetCore.csproj
@@ -20,4 +20,13 @@
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="runtimes\win-x64\native\libwebp.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="runtimes\win-x86\native\libwebp.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
