--- a/CreatePackage/CreatePackage.csproj
+++ b/CreatePackage/CreatePackage.csproj
@@ -10,4 +10,8 @@
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ReadJEnc" Version="1.3.1.2" />
+  </ItemGroup>
+
 </Project>
