--- a/RuntimeCheckerDesktop/RuntimeCheckerDesktop.csproj
+++ b/RuntimeCheckerDesktop/RuntimeCheckerDesktop.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <UseWindowsForms>true</UseWindowsForms>
+    <RollForward>Major</RollForward>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
