--- a/ShibugakiViewer.Settings/ShibugakiViewer.Settings.csproj
+++ b/ShibugakiViewer.Settings/ShibugakiViewer.Settings.csproj
@@ -1,7 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <Authors>Boredbone</Authors>
     <Version>2.1.0</Version>
   </PropertyGroup>
